--- a/_includes/common_menu_links.html
+++ b/_includes/common_menu_links.html
@@ -3,23 +3,43 @@
     <li>
         <a href="/">{{ site.title }}</a>
     </li>
+
+    <li class="dropdown">
+        <a href="/news/" class="dropdown_link">
+            News <i class="fa fa-angle-down fa-fw fa-lg" aria-hidden="true"></i>
+        </a>
+        <div class="dropdown_content">
+            <a href="/news/headline/">Headlines</a>
+            <a href="/news/business/">Business</a>
+            <a href="/news/agrarian/">Agrarian</a>
+            <a href="/news/environment/">Environment</a>
+            <a href="/news/foreign_affairs/">Foreign Affairs</a>
+            <a href="/news/other/">Other News</a>
+            {% if item.mode == "dev" %}
+            {% endif %}
+        </div>
+    </li>
+
+    {% comment %}
     <li>
-        <a href="/news/top/">Headlines</a>
+        <a href="/news/headline/">Headlines</a>
     </li>
     <li>
         <a href="/news/business/">Business</a>
     </li>
     <li>
-        <a href="/news/others/">Other Stories</a>
+        <a href="/news/other/">Other News</a>
     </li>
-    {% comment %}
     <li>
         <a href="/">Sections</a>
     </li>
     {% endcomment %}
+
     {% if site.development %}
     <li class="dropdown">
-        <a href="/info/" class="dropdown_link">Info</a>
+        <a href="/info/" class="dropdown_link">
+            Info <i class="fa fa-angle-down fa-fw fa-lg" aria-hidden="true"></i>
+        </a>
         <div class="dropdown_content">
             {% for item in site.data.sections %}
                 {% if item.mode != "dev" %}
