--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,9 @@
     {% else %}
         <p>{{ site.tagline }}</p>
     {% endif %}
+    {% comment %}
+    The following license text is used for printing only.
+    {% endcomment %}
     <p class="license">
         Licensed under a Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA).<br/>
         You are free to copy, reproduce, distribute, display, and make adaptations but you must provide proper attribution.
@@ -12,4 +15,4 @@
     </p>
 </header>
     
-{% include common_menu_links.html %}
+{% include links_navigation.html %}
