--- a/_includes/hub_left_sidebar.html
+++ b/_includes/hub_left_sidebar.html
@@ -1,5 +1,7 @@
 <section class="column_left_sidebar">
-    {% include quotes.html %}
-    {% include announcements.html %}
-    {% include weather_satellite.html %}
+    {% include component_datetime.html %}
+    {% include component_quotes.html %}
+    {% include component_slideshow_announcements.html %}
+    {% include component_weather_satellite.html %}
+    {% include component_list_info.html %}
 </section>
