--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,18 +1,18 @@
 <head>
-    {% seo %}
-    {% feed_meta %}
-    
     {% if page.title == "Home" %}
         <title>{{ site.title }}</title>
     {% else %}
-        <title>{{ site.title }} - {{ page.title }}</title>
+        <title>{{ page.title }} - {{ site.title }}</title>
     {% endif %}
-    
+
+    {% seo %}
+    {% feed_meta %}
+
     <!-- Meta Information -->
     <!------------------------------------------------------------------------>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-	<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
     
     <!-- Enable responsiveness on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -27,8 +27,8 @@
         <meta name="description" content="{{ site.tagline }}" />
         {% endif %}
     {% endif %}
-	<meta name="keywords" content="news duterte" />
-	<meta name="robots" content="index, follow" />
+    <meta name="keywords" content="news duterte" />
+    <meta name="robots" content="index, follow" />
     <link rel="icon" type="image/png" href="/images/favicon/{{ site.author.icon }}">
     
     <!-- Twitter card -->
