--- a/_includes/post_left_sidebar.html
+++ b/_includes/post_left_sidebar.html
@@ -1,5 +1,5 @@
 <section class="column_left_sidebar">
     <div id="announcements_container">
-        {% include announcements.html %}
+        {% include component_slideshow_announcements.html %}
     </div>
 </section>
