--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -1,10 +1,10 @@
-<div id="related_posts_block">
-    <h1>Related News</h1>
-    <div class="related_posts">
-        {% capture nowday  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
-        {% capture nowyear %}{{ 'now' | date: '%Y' }}{% endcapture %}
+<div id="related_posts_block" class="block block_default_fonts">
+    <h1>Related News</h1><div class="right_filler">&nbsp;</div>
+    <div class="entries">
+        {% comment %}
         <!-- The following code snippet was taken from http://zhangwenli.com -->
         <!-- http://zhangwenli.com/blog/2014/07/15/jekyll-related-posts-without-plugin/ -->
+        {% endcomment %}
         {% assign postCount = 0 %}
         {% assign foundPost = false %}
         {% for post in site.categories['news'] %}
@@ -22,28 +22,21 @@
                 {% endfor %}
             
                 {% if foundPost == true %}
-                    <div class="related_post">
-                        <div class="related_post_heading">
-                            <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-                        </div>
+                    <div class="entry">
+                        <h2><a href="{{ post.url }}.html">{{ post.title }}</a></h2>
                         {% if post.date == nil %}
                             <p class="date">Undated</p>
                         {% else %}
-                            <p class="date">
-                                {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
-                                {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
-                                {% if postdate == nowday %}
-                                    {{ post.date | date: site.data.format.same_day }}
-                                {% elsif postyear == nowyear %}
-                                    {{ post.date | date: site.data.format.same_year }}
-                                {% endif %}
-                            </p>
+                            <p class="date">{{ post.date | date: site.data.format.date_only }}</p>
                         {% endif %}
                         <p class="excerpt">{{ post.excerpt }}</p>
+                        {% if site.development %}
+                        <p class="tags">{{ page.tags }}</p>
+                        {% endif %}
                     </div>
                     {% assign foundPost = false %}
-                    {% capture postCount %}{{ postCount | plus: 1 }}{% endcapture %}
-                    {% if postCount == '5' %}
+                    {% assign postCount = postCount | plus: 1 %}
+                    {% if postCount == 5 %}
                         {% break %}
                     {% endif %}
                 {% endif %}
@@ -52,10 +45,8 @@
         {% endfor %}
 
         {% if postCount == 0 %}
-            <div class="related_post">
-                <div class="related_post_heading">
-                    <h2>No related posts</h2>
-                </div>
+            <div class="entry">
+                <p class="no_related_posts">There is no related news.</p>
             </div>
         {% endif %}
     </div>
