--- a/_sass/newsbits.scss
+++ b/_sass/newsbits.scss
@@ -5,5 +5,8 @@
     }
     div.entries {
         @include sidebar_component_scroll_internal(calc(100vh - 125px));
+        div.entry {
+            width: calc(100% - 5px);
+        }
     }
 }
