Fix no entries message display

--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -45,9 +45,7 @@
         {% endfor %}
 
         {% if postCount == 0 %}
-            <div class="entry">
-                <p class="no_related_posts">There is no related news.</p>
-            </div>
+            <p class="no_entries">There is no related news.</p>
         {% endif %}
     </div>
 </div>
