--- a/_sass/mixin.scss
+++ b/_sass/mixin.scss
@@ -222,6 +222,8 @@
         padding-right: 10px;
     }
     float: left;
+    display: inline-block;
+    width: 100%;
 }
 
 // Scrollable internal component block
