--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
 <header>
     <h1>{{ site.title }}</h1>
+    {% comment %}
+    The following texts are for printing only.
+    {% endcomment %}
     {% if site.description %}
         <p>{{ site.description }}</p>
     {% else %}
         <p>{{ site.tagline }}</p>
     {% endif %}
-    {% comment %}
-    The following license text is used for printing only.
-    {% endcomment %}
     <p class="license">
         Licensed under a Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA).<br/>
         You are free to copy, reproduce, distribute, display, and make adaptations but you must provide proper attribution.
