Do not use fixed width fontawesome fonts in navigation links

--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -6,7 +6,7 @@
 
     <li class="dropdown">
         <a href="/news/" class="dropdown_link">
-            News <i class="fa fa-angle-down fa-fw fa-lg" aria-hidden="true"></i>
+            News&nbsp;&nbsp;<i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
         </a>
         <div class="dropdown_content">
             <a href="/news/headline/">Headlines</a>
@@ -39,7 +39,7 @@
     {% if site.development %}
     <li class="dropdown">
         <a href="/info/" class="dropdown_link">
-            Info <i class="fa fa-angle-down fa-fw fa-lg" aria-hidden="true"></i>
+            Info&nbsp;&nbsp;<i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
         </a>
         <div class="dropdown_content">
             {% for item in site.data.sections %}
