--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -58,10 +58,10 @@ ul#nav_top {
             text-decoration: none;
             color: $color_button_text;
             display: inline-block;
-            margin: 7px 7px;
-            padding: 7px 9px;
+            margin: 6px 7px 7px 7px;
+            padding: 5px 9px;
             border: none;
-            border-radius: 3px;
+            border-radius: 2px;
             transition: background-color 0.2s ease;
             &:hover:not(.active) {
                 color: $color_button_hover_text;
@@ -88,7 +88,8 @@ ul#nav_top {
         li {
             float: none;
             &:first-child {
-                a { padding-top: 16px; }
+                // Added 3px offset from the original top padding above
+                a { padding-top: 8px; }
             }
         }
         li.right {
