--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -1,61 +1,63 @@
-<div>
-<ul id="nav_top">
-    <li>
-        <a href="/">{{ site.title }}</a>
-    </li>
+<div id="nav_top">
+    <ul class="left">
+        <li>
+            <a href="/">{{ site.title }}</a>
+        </li>
 
-    <li class="dropdown">
-        <a href="/news/" class="dropdown_link">
-            News&nbsp;&nbsp;<i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
-        </a>
-        <div class="dropdown_content">
-            <a href="/news/headline/">Headlines</a>
-            <a href="/news/business/">Business</a>
-            <a href="/news/agrarian/">Agrarian</a>
-            <a href="/news/environment/">Environment</a>
-            <a href="/news/foreign_affairs/">Foreign Affairs</a>
-            <a href="/news/peace/">Peace Process</a>
-            <a href="/news/other/">Other News</a>
-            {% if item.mode == "dev" %}
-            {% endif %}
-        </div>
-    </li>
-
-    {% comment %}
-    <li>
-        <a href="/news/headline/">Headlines</a>
-    </li>
-    <li>
-        <a href="/news/business/">Business</a>
-    </li>
-    <li>
-        <a href="/news/other/">Other News</a>
-    </li>
-    <li>
-        <a href="/">Sections</a>
-    </li>
-    {% endcomment %}
-
-    {% if site.development %}
-    <li class="dropdown">
-        <a href="/info/" class="dropdown_link">
-            Info&nbsp;&nbsp;<i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
-        </a>
-        <div class="dropdown_content">
-            {% for item in site.data.sections %}
-                {% if item.mode != "dev" %}
-            <a href="{{ item.link }}">{{ item.name }}</a>
-                {% endif %}
-            {% endfor %}
-            {% for item in site.data.sections %}
+        <li class="dropdown">
+            <a href="/news/" class="dropdown_link">
+                News&nbsp;&nbsp;<i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+            </a>
+            <div class="dropdown_content">
+                <a href="/news/headline/">Headlines</a>
+                <a href="/news/business/">Business</a>
+                <a href="/news/agrarian/">Agrarian</a>
+                <a href="/news/environment/">Environment</a>
+                <a href="/news/foreign_affairs/">Foreign Affairs</a>
+                <a href="/news/peace/">Peace Process</a>
+                <a href="/news/other/">Other News</a>
                 {% if item.mode == "dev" %}
-            <a href="{{ item.link }}">{{ item.name }}</a>
                 {% endif %}
-            {% endfor %}
-        </div>
-    </li>
-    {% endif %}
+            </div>
+        </li>
 
-    {% include links_social_media.html %}
-</ul>
+        {% comment %}
+        <li>
+            <a href="/news/headline/">Headlines</a>
+        </li>
+        <li>
+            <a href="/news/business/">Business</a>
+        </li>
+        <li>
+            <a href="/news/other/">Other News</a>
+        </li>
+        <li>
+            <a href="/">Sections</a>
+        </li>
+        {% endcomment %}
+
+        {% if site.development %}
+        <li class="dropdown">
+            <a href="/info/" class="dropdown_link">
+                Info&nbsp;&nbsp;<i class="fa fa-angle-down fa-lg" aria-hidden="true"></i>
+            </a>
+            <div class="dropdown_content">
+                {% for item in site.data.sections %}
+                    {% if item.mode != "dev" %}
+                <a href="{{ item.link }}">{{ item.name }}</a>
+                    {% endif %}
+                {% endfor %}
+                {% for item in site.data.sections %}
+                    {% if item.mode == "dev" %}
+                <a href="{{ item.link }}">{{ item.name }}</a>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </li>
+        {% endif %}
+    </ul>
+
+    <ul>
+        {% include links_social_media.html %}
+    </ul>
 </div>
