--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -24,7 +24,7 @@ header {
     }
 }
 
-ul#nav_top {
+#nav_top {
     @media print {
         display: none;
     }
@@ -32,108 +32,109 @@ ul#nav_top {
         position: fixed;
         top: 0;
     }
+    display: inline;
     z-index: 1001;
     width: 100%;
-    list-style-type: none;
     background-color: $color_button_bg;
-    // NOTE: Overflow cannot be hidden
-    //       Otherwise the dropdown div will not be seen
-    @include compact;
 
-    li {
-        float: left;
-        &.dropdown { float: left; }
-        &.right { float: right; }
+    ul {
+        // NOTE: Overflow cannot be hidden
+        //       Otherwise the dropdown div will not be seen
+
         @include compact;
+        list-style-type: none;
+        //display: inline-block;
+        //width: 100%;
 
-        a {
-            font-family: $font_button;
-            font-size: $font_size_button;
-            @include max-screen(720px) {
-                font-size: $font_size_button + 1;
+        li {
+            float: left;
+            &.dropdown { float: left; }
+            &.right { float: right; }
+            @include compact;
+
+            &.right {
+                float: right;
+                @include max-screen(720px) {
+                    float: left;
+                }
             }
-            font-weight: bold;
-            text-align: center;
-            text-transform: uppercase;
-            text-decoration: none;
-            color: $color_button_text;
+
+            a {
+                font-family: $font_button;
+                font-size: $font_size_button;
+                @include max-screen(720px) {
+                    font-size: $font_size_button + 1;
+                }
+                font-weight: bold;
+                text-align: center;
+                text-transform: uppercase;
+                text-decoration: none;
+                color: $color_button_text;
+                display: inline-block;
+                margin: 6px 7px 7px 7px;
+                padding: 5px 9px;
+                border: none;
+                border-radius: 2px;
+                transition: background-color 0.2s ease;
+                &:hover:not(.active) {
+                    color: $color_button_hover_text;
+                    background-color: $color_button_hover_bg;
+                    border: none;
+                }
+                &.active { background-color: #4CAF50; }
+                i.fa-angle-down {
+                    font-weight: bold;
+                }
+            }
+
+            &:first-child {
+                a {
+                    font-family: $font_sans;
+                    @include min-screen(720px + 1px) {
+                        font-size: $font_size_button + 1;
+                    }
+                }
+            }
+        }
+
+        // Dropdown menu
+
+        li.dropdown {
+            position: relative;
             display: inline-block;
-            margin: 6px 7px 7px 7px;
-            padding: 5px 9px;
-            border: none;
-            border-radius: 2px;
-            transition: background-color 0.2s ease;
-            &:hover:not(.active) {
+        }
+
+        .dropdown_content {
+            display: none;
+            position: absolute;
+            //background-color: $color_button_hover_bg;
+            background-color: $color_button_bg;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+        }
+
+        .dropdown_content a {
+            color: $color_text;
+            color: $color_button_text;
+            display: block;
+            text-align: left;
+
+            &:hover {
                 color: $color_button_hover_text;
                 background-color: $color_button_hover_bg;
                 border: none;
             }
-            &.active { background-color: #4CAF50; }
-            i.fa-angle-down {
-                font-weight: bold;
-            }
         }
 
-        &:first-child {
-            a {
-                font-family: $font_sans;
-                @include min-screen(720px + 1px) {
-                    font-size: $font_size_button + 1;
-                }
-            }
+        .dropdown:hover .dropdown_content {
+            display: block;
         }
-    }
 
-    @include max-screen(720px) {
-        li {
-            float: none;
-            &:first-child {
-                // Added 3px offset from the original top padding above
-                a { padding-top: 8px; }
-            }
-        }
-        li.right {
-            float: left;
-        }
-    }
-
-    // Dropdown menu
-
-    li.dropdown {
-        position: relative;
-        display: inline-block;
-    }
-
-    .dropdown_content {
-        display: none;
-        position: absolute;
-        //background-color: $color_button_hover_bg;
-        background-color: $color_button_bg;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-    }
-
-    .dropdown_content a {
-        color: $color_text;
-        color: $color_button_text;
-        display: block;
-        text-align: left;
-
-        &:hover {
+        .dropdown:hover .dropdown_link {
             color: $color_button_hover_text;
             background-color: $color_button_hover_bg;
-            border: none;
         }
-    }
-
-    .dropdown:hover .dropdown_content {
-        display: block;
-    }
-
-    .dropdown:hover .dropdown_link {
-        color: $color_button_hover_text;
-        background-color: $color_button_hover_bg;
     }
 }
