--- a/_includes/links_social_media.html
+++ b/_includes/links_social_media.html
@@ -1,5 +1,5 @@
 {% for item in site.data.socmed %}
-    <li class="right">
+    <li class="icons right">
         <a href="{{ item.link }}" target="{{ item.target }}" alt="{{ item.name }}"
             data-toggle="tooltip"
             data-placement="top"
