--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -43,14 +43,17 @@ header {
 
         @include compact;
         list-style-type: none;
-        //display: inline-block;
-        //width: 100%;
+        @include max-screen(720px) {
+            display: inline-block;
+            width: 100%;
+            background-color: $color_button_bg;
+        }
 
         li {
+            @include compact;
             float: left;
             &.dropdown { float: left; }
             &.right { float: right; }
-            @include compact;
 
             &.right {
                 float: right;
@@ -58,42 +61,48 @@ header {
                     float: left;
                 }
             }
+        }
 
-            a {
-                font-family: $font_button;
-                font-size: $font_size_button;
-                @include max-screen(720px) {
-                    font-size: $font_size_button + 1;
-                }
-                font-weight: bold;
-                text-align: center;
-                text-transform: uppercase;
-                text-decoration: none;
-                color: $color_button_text;
-                display: inline-block;
-                margin: 6px 7px 7px 7px;
-                padding: 5px 9px;
-                border: none;
-                border-radius: 2px;
-                transition: background-color 0.2s ease;
-                &:hover:not(.active) {
-                    color: $color_button_hover_text;
-                    background-color: $color_button_hover_bg;
-                    border: none;
-                }
-                &.active { background-color: #4CAF50; }
-                i.fa-angle-down {
-                    font-weight: bold;
-                }
+        li > span {
+            cursor: pointer;
+        }
+
+        li > span,
+        li a {
+            @include compact;
+            font-family: $font_button;
+            font-size: $font_size_button;
+            @include max-screen(720px) {
+                font-size: $font_size_button + 1;
             }
+            font-weight: bold;
+            text-align: center;
+            text-transform: uppercase;
+            text-decoration: none;
+            color: $color_button_text;
+            display: inline-block;
+            margin: 6px 7px 7px 7px;
+            padding: 5px 9px;
+            border: none;
+            transition: background-color 0.2s ease;
+            i.fa-angle-down {
+                font-weight: bold;
+            }
+        }
 
-            &:first-child {
-                a {
-                    font-family: $font_sans;
-                    @include min-screen(720px + 1px) {
-                        font-size: $font_size_button + 1;
-                    }
-                }
+        li > span:hover,
+        li a:hover:not(.active) {
+            color: $color_button_hover_text;
+            background-color: $color_button_hover_bg;
+            border: none;
+            border-radius: 2px;
+        }
+
+        li:first-child,
+        li:first-child a {
+            font-family: $font_sans;
+            @include min-screen(720px + 1px) {
+                font-size: $font_size_button + 1;
             }
         }
 
@@ -102,39 +111,50 @@ header {
         li.dropdown {
             position: relative;
             display: inline-block;
+            @include max-screen(720px) {
+                float: right;
+            }
         }
 
-        .dropdown_content {
+        div.dropdown_content {
             display: none;
             position: absolute;
-            //background-color: $color_button_hover_bg;
             background-color: $color_button_bg;
+            background-color: cadetblue;
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
             border-bottom-left-radius: 4px;
             border-bottom-right-radius: 4px;
-        }
 
-        .dropdown_content a {
-            color: $color_text;
-            color: $color_button_text;
-            display: block;
-            text-align: left;
+            a {
+                margin: 0 7px 0 7px;
+                padding: 7px 11px;
+                color: $color_button_text;
+                display: block;
+                text-align: left;
 
-            &:hover {
-                color: $color_button_hover_text;
-                background-color: $color_button_hover_bg;
-                border: none;
+                &:first-child {
+                    margin-top: 7px;
+                }
+                &:last-child {
+                    margin-bottom: 7px;
+                }
+
+                &:hover {
+                    color: $color_button_hover_text;
+                    background-color: $color_button_hover_bg;
+                    border: none;
+                }
             }
         }
 
-        .dropdown:hover .dropdown_content {
+        li.dropdown:hover div.dropdown_content {
             display: block;
         }
 
-        .dropdown:hover .dropdown_link {
-            color: $color_button_hover_text;
-            background-color: $color_button_hover_bg;
+        li.dropdown:hover span,
+        li.dropdown:hover a.dropdown_link {
+            border-radius: 2px;
         }
     }
 }
