--- a/_includes/component_weather_satellite.html
+++ b/_includes/component_weather_satellite.html
@@ -3,14 +3,16 @@ http://www.goes.noaa.gov/sohemi/
 {% endcomment %}
 <div id="weather_block" class="block block_default_fonts">
     <h1>Satellite Image</h1>
-    <div class="weather_satellite">
-        <div class="image">
-            {% if site.development == true %}
-            <img src="/images/public/philir.jpg" width="100%" height="auto"/>
-            {% else %}
-            <img src="{{ site.data.links.weather_satellite_image }}"/>
-            {% endif %}
-            <p class="attribution">Data from Himawari-8 via PAGASA&nbsp;</p>
+    <div class="entries">
+        <div class="entry">
+            <div class="image">
+                {% if site.development == true %}
+                <img src="/images/public/philir.jpg" width="100%" height="auto"/>
+                {% else %}
+                <img src="{{ site.data.links.weather_satellite_image }}"/>
+                {% endif %}
+                <p class="attribution">Data from Himawari-8 via PAGASA&nbsp;</p>
+            </div>
         </div>
     </div>
 </div>
