Update navigation links

--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -26,7 +26,8 @@
                 <a href="/info/places/">Places</a>
                 <a href="/info/org/">Organization</a>
                 <a href="/info/company/">Company</a>
-                <a href="/info/sources/">Info/News Sources</a>
+                <a href="/info/doc">Papers and Documents</a>
+                <a href="/info/sources/">Info and News Sources</a>
             </div>
         </li>
         {% endif %}
