--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,7 +56,7 @@ layout: default
     </div>
     {% endif %}
 
-    {% if page.sources.size > 0 %}
+    {% if page.sources.size and page.sources.size > 0 and page.sources[0].link %}
     <div class="info_sources">
         <p>Sources:
             {% for source in page.sources %}
