--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -111,6 +111,9 @@ section.post_column_main {
     p {
         @include bottom_margin;
     }
+    div.video_container ~ p {
+        padding-top: 10px;
+    }
     table ~ p {
         margin-top: 12px;
     }
