--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -8,11 +8,12 @@
             <span>News&nbsp;&nbsp;<i class="fa fa-angle-down fa-lg" aria-hidden="true"></i></span>
             <div class="dropdown_content">
                 <a href="/news/headline/">Headlines</a>
-                <a href="/news/business/">Business</a>
+                <a href="/news/criminality/">Criminality</a>
+                <a href="/news/peace/">Peace Process</a>
                 <a href="/news/agrarian/">Agrarian</a>
                 <a href="/news/environment/">Environment</a>
+                <a href="/news/business/">Business</a>
                 <a href="/news/foreign_affairs/">Foreign Affairs</a>
-                <a href="/news/peace/">Peace Process</a>
                 <a href="/news/other/">Other News</a>
             </div>
         </li>
