--- a/_includes/post_bottom.html
+++ b/_includes/post_bottom.html
@@ -30,6 +30,8 @@
             </li>
             <li>
                 <a href="https://twitter.com/share" data-via="{{ twitter }}"
+                    data-url="{{ page.url }}"
+                    data-text="{{ page.title }}"
                     data-toggle="tooltip" 
                     data-placement="top"
                     title="Tweet this page">
